# boxpy

./: .gitignore  lint.sh  pyproject.toml  readme.md  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: lint.yml
boxpy/: __init__.py  grid.py  interpolation.py  smoother.py  solver.py  stencil.py
examples/: aniso_diffusion.py  image.py  poisson.py  recirc_flow.py  test.py
