[metadata]
name = boxpy
version = attr: boxpy.__version__
long_description = file: README.md
long_description_content_type = text/markdown
author = Nicolas Nytko
author_email='nnytko2@illinois.edu',
url = https://github.com/nicknytko/boxpy
description = BoxMG implemented in Python
keywords = multigrid, black box
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy>=1.7.0
    scipy>=0.12.0
    pyamg>=5.0.0
tests_require =
    pytest>=2

[flake8]
max-line-length = 92
per-file-ignores = __init__.py:F401, version.py:D100
ignore-names = A, Ax, Ay, P, R, AH, P_v, P_j, A_sym, Cx, Cy, G, RT, I_i, B_i, T, A_bc, C

[pylint:MESSAGES CONTROL]
disable=invalid-name,too-many-lines,too-many-locals,too-many-branches,too-many-statements,too-many-arguments,too-few-public-methods,too-many-return-statements,too-few-public-methods,too-many-instance-attributes,no-else-return

[pylint.FORMAT]
good-names = bc, nx, ny, dx, dy, nu, Ax, Ay, A, x, y, P, R, AH, f, xx, yy, A_sym, Cx, Cy, G, RT

[pylint:MASTER]
ignore-patterns=version.py
